--- a/static/css/_card.css
+++ b/static/css/_card.css
@@ -22,8 +22,11 @@ img {
     padding-inline: 1.2rem;
     width: 16rem;
     height: 26rem;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px -2px 4px 0px rgba(0, 0, 0, 0.1),  /* Sombra leve para cima */
+            0px 4px 4px 0px rgba(0, 0, 0, 0.25); /* Sombra padrão */
+
     background-color: #F3F2F7;
+    background-color: #fff;
     border-radius: 15px;
     margin: 1rem;
 }
