--- a/static/css/_card.css
+++ b/static/css/_card.css
@@ -6,12 +6,18 @@
     scrollbar-width: none;
 }
 
-img {
+.image_container {
     width: 15rem;
-    height: 18rem;
-    height: auto;
+    height: 22rem;
+    overflow: hidden; 
     border-radius: 15px;
-}
+  }
+  
+  .image_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+  }
 
 .container {
     display: flex;
@@ -60,3 +66,4 @@ img {
     align-items: flex-start;
     width: 100%;
 }
+
