--- a/templates/_card.html
+++ b/templates/_card.html
@@ -2,11 +2,12 @@
 
 <head>
     <link rel="stylesheet" href="{%static 'css/_card.css'%}" />
-
-
 </head>
+
 <div class="container">
-    <img src="{{item.imagem.url}}" alt="imagem do livro">
+    <div class="image_container">
+        <img src="{{item.imagem.url}}" alt="imagem do livro">
+    </div>
     <div class="container_interior">
         <p id="titulo">
             {{item.titulo}}
@@ -15,4 +16,7 @@
             {{item.autor.nome}}
         </p>
     </div>
+    <a href="{%url 'detalhesLivro' item.id%}">
+        <p>Ver livro</p>
+    </a>
 </div>
