--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,89 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-body{
+body {
     background-color: #FFFFFF;
-    width: 100vw;  
-    overflow-x: hidden; 
+    width: 100vw;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
+}
+
+.header {
+    display: flex;
+    width: "100%";
+    height: 160px;
+    padding: 29px 24px;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-shrink: 0;
+
+}
+
+header>div {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a {
+    font-family: 'Inter', sans-serif;
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+    color: #2C3435;
+}
+
+.pagina_atual {
+    color: #7474FD;
+}
+
+.barra_pesquisa {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.barra_pesquisa ul {
+    display: flex;
+    width: 737px;
+    justify-content: space-around;
+    align-items: center;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+
+#div_logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+}
+
+#text_logo {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #7474FD;
+    font-family: 'Inter', sans-serif;
+
+}
+
+#logo {
+    width: 4rem;
+    height: auto;
 }
