Update user-related code blocks to use 'userName' instead of 'nome'

--- a/bibliotecando/templates/bibliotecando/registro.html
+++ b/bibliotecando/templates/bibliotecando/registro.html
@@ -22,7 +22,7 @@
                     <h1>Registro</h1>
                     <p>Por favor, preencha este formulário para criar uma conta.</p>
     
-                    {{ form.nome }}
+                    {{ form.username }}
                     {{ form.email }}
                     {{ form.imagem }}
                     {{ form.data_nascimento }}
