Update header styles and authentication links

--- a/bibliotecando/templates/bibliotecando/register.html
+++ b/bibliotecando/templates/bibliotecando/register.html
@@ -26,7 +26,8 @@
                     {{ form.email }}
                     {{ form.imagem }}
                     {{ form.data_nascimento }}
-                    {{ form.endereco }}
+                    {{ form.password1 }}
+                    {{ form.password2 }}
     
     
                     <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
