--- a/bibliotecando/static/css/registro.css
+++ b/bibliotecando/static/css/registro.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
 
 
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: "Mulish", sans-serif;
     background-color: #FFF;
 }
-main{
+
+main {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -16,6 +17,7 @@ main{
     background-color: #FFF;
     color: #252525;
 }
+
 .form-control {
     display: flex;
     height: 2rem;
@@ -30,7 +32,8 @@ main{
 
 }
 
-.container_right{
+
+.container_right {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -40,7 +43,7 @@ main{
     width: 60vw;
 }
 
-.container_left{
+.container_left {
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -49,15 +52,30 @@ main{
     background-color: #FFF;
     width: 40vw;
 }
-img{
+
+img {
     width: 12rem;
     height: auto;
     margin-top: 20vh;
 }
-.container{
+
+.container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+
+}
+
+.registerbtn {
+    display: flex;
+    height: 77px;
+    padding: 15px 80px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    align-self: stretch;
+    border-radius: 10px;
+    border: 5px solid #FFF;
+    background: #7474FD;
 }
