--- a/templates/_card.html
+++ b/templates/_card.html
@@ -16,7 +16,7 @@
             {{item.autor.nome}}
         </p>
     </div>
-    <a href="{%url 'detalhesLivro' item.id%}">
+    <a href="{%url 'bibliotecando:detalhesLivro' item.id%}">
         <p>Ver livro</p>
     </a>
 </div>
