--- a/bibliotecando/static/css/detalhesLivro.css
+++ b/bibliotecando/static/css/detalhesLivro.css
@@ -99,3 +99,30 @@
     padding: 0.5rem;
     border-radius: 15px;
 }
+
+.button-link {
+    display: flex;
+    width: 8rem;
+    height: 2rem;
+    padding-left: 0.2rem;
+    justify-content: flex-start;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 8px;
+    background: #F3F2F7;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+}
+.button-link :active{
+    transform: scale(0.95);
+    opacity: 0.9;
+}
+
+.button-link p {
+    color: #7474FD;
+    font-family: Inter;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+}
