--- a/bibliotecando/static/css/registro_login.css
+++ b/bibliotecando/static/css/registro_login.css
@@ -6,6 +6,8 @@ body {
     padding: 0;
     font-family: "Mulish", sans-serif;
     background-color: #FFF;
+    width: 100vw;
+    height: 100vh;
 }
 
 main {
@@ -19,28 +21,58 @@ main {
 }
 
 .form-control {
+    color: #252525;
+    border: none;
+    background-color: transparent;
+    width: auto;
+    height: auto;
+
+}
+
+.form-control:focus {
+    outline: none;
+    border: none;
+    background-color: transparent;
+    box-shadow: none;
+
+}
+
+.form-group {
     display: flex;
     height: 2rem;
     width: 20rem;
     padding: 0.5rem 20px;
     flex-shrink: 0;
-    align-self: stretch;
     border-radius: 8px;
     background: #F3F3F3;
     margin: 0.2rem;
     font-weight: 400;
+    justify-content: space-between;
+}
 
+.form-control:focus {
+    outline: none;
+    /* Remove o outline do input */
+    box-shadow: none;
+    /* Remove qualquer sombra do input */
+}
+
+.form-group:has(.form-control:focus) {
+    outline: 2px solid #8C8CFF;
+    /* Adiciona um outline no form-group quando o input estiver focado */
+    border-radius: 8px;
+    /* Garante que o border-radius seja mantido */
 }
 
 
 .container_right {
-    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     background-color: #7474FD;
-    width: 60vw;
+    width: 50vw;
+    height: 100vh;
 }
 
 .container_left {
@@ -50,7 +82,7 @@ main {
     justify-content: 'center';
     align-items: center;
     background-color: #FFF;
-    width: 40vw;
+    width: 50vw;
 }
 
 img {
@@ -69,13 +101,47 @@ img {
 
 .registerbtn {
     display: flex;
-    height: 77px;
+    height: 4rem;
+    width: 20rem;
     padding: 15px 80px;
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
-    align-self: stretch;
     border-radius: 10px;
     border: 5px solid #FFF;
     background: #7474FD;
+
+}
+
+.registerbtn p {
+    color: #FFF;
+}
+
+.registerbtn:active {
+    transform: scale(0.95);
+    opacity: 0.9;
+}
+
+/*Alert css*/
+.alert {
+    position: relative;
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: 0.35rem;
+}
+
+.alert-danger {
+    color: #78261f;
+    background-color: #fadbd8;
+    border-color: #f8ccc8;
+}
+
+.text-danger {
+    color: #e74a3b !important;
+}
+
+a.text-danger:hover,
+a.text-danger:focus {
+    color: #be2617 !important;
 }
