--- a/bibliotecando/templates/bibliotecando/register.html
+++ b/bibliotecando/templates/bibliotecando/register.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-    <link rel="stylesheet" href="{% static 'css/registro.css' %}">
+    <link rel="stylesheet" href="{% static 'css/registro_login.css' %}">
 </head>
 
 <body>
@@ -15,24 +15,87 @@
             <img src="{% static 'svg/bibliotecandoLogo.svg' %}" alt="">
         </div>
         <div class="container_right">
-            <form method="post" enctype="multipart/form-data">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
-    
                 <div class="container">
                     <h1>Registro</h1>
                     <p>Por favor, preencha este formulário para criar uma conta.</p>
-    
-                    {{ form.username }}
-                    {{ form.email }}
-                    {{ form.imagem }}
-                    {{ form.data_nascimento }}
-                    {{ form.password1 }}
-                    {{ form.password2 }}
-    
-    
-                    <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
-                    <button type="submit" class="registerbtn">Register</button>
+
+                    <div class="form-group">
+                        <input type="text" name="username" id="username" class="form-control" placeholder="Usuario"
+                            required>
+                        <img src="{% static 'svg/User.svg' %}" alt="">
+                        {% if form.username.errors %}
+                        <div class="text-danger">
+                            {{ form.username.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Email" required>
+                        <img src="{% static 'svg/Email.svg' %}" alt="">
+                        {% if form.email.errors %}
+                        <div class="text-danger">
+                            {{ form.email.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <input type="file" name="imagem" id="imagem" class="form-control" placeholder="Imagem" required>
+                        <img src="{% static 'svg/camera.svg' %}" alt="">
+                        {% if form.imagem.errors %}
+                        <div class="text-danger">
+                            {{ form.imagem.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="form-group">
+                        <input type="date" name="data_nascimento" id="data_nascimento" class="form-control" required>
+
+                        {% if form.data_nascimento.errors %}
+                        <div class="text-danger">
+                            {{ form.data_nascimento.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password1" id="password1" class="form-control" placeholder="Senha"
+                            required>
+                        <img src="{% static 'svg/Lock.svg' %}" alt="">
+                        {% if form.password1.errors %}
+                        <div class="text-danger">
+                            {{ form.password1.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+                    <div class="form-group">
+                        <input type="password" name="password2" id="password2" class="form-control"
+                            placeholder="Repetir senha" required>
+                        <img src="{% static 'svg/Lock.svg' %}" alt="">
+                        {% if form.password2.errors %}
+                        <div class="text-danger">
+                            {{ form.password2.errors.0 }}
+                        </div>
+                        {% endif %}
+                    </div>
+
+
+
+
+                    <p>Already have an account? <a href="{% url 'bibliotecando:login' %}">log in!</a>.</p>
+                    <button type="submit" class="registerbtn">
+                        <p>Register</p>
+                    </button>
             </form>
+            <!-- Mensagens de erro -->
+            {% if messages %}
+            <div class="mt-3">
+                {% for message in messages %}
+                <div class="alert alert-danger">{{ message }}</div>
+                {% endfor %}
+            </div>
+            {% endif %}
         </div>
     </main>
 </body>
