--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,6 +3,7 @@
 body {
     background-color: #FFFFFF;
     width: 100vw;
+    height: auto;
     overflow-x: hidden;
     margin: 0;
     padding: 0;
@@ -84,7 +85,7 @@ a {
 }
 
 #logo {
-    width: 4rem;
+    width: 6rem;
     height: auto;
 }
 
