Update profile page to display user's image

--- a/bibliotecando/templates/bibliotecando/profile.html
+++ b/bibliotecando/templates/bibliotecando/profile.html
@@ -8,7 +8,7 @@
             <h2>Informações do usuário</h2>
             <p>Nome: {{ request.user.username }}</p>
             <p>Email: {{ request.user.email }}</p>
-            <img src="{{ usuario.imagem.url }}" alt="">
+            <img src="{{ imagem.url }}" alt="">
         </div>
         
     </div>
