Update profile page to display user's image

--- a/bibliotecando/templates/bibliotecando/detalhesLivro.html
+++ b/bibliotecando/templates/bibliotecando/detalhesLivro.html
@@ -8,8 +8,8 @@
 {% block 'body' %}
 <main>
     <div class="container_titulo">
-        <h2 class="titulo_livro">{{ livro.titulo }}</h2>
-        <hr class="custom_line">
+        <h2 class="titulo">{{ livro.titulo }}</h2>
+        <hr class="custom-line">
     </div>
     <div class="container">
         <!-- aqui começa a parte da esquerda -->
