--- a/bibliotecando/templates/bibliotecando/login.html
+++ b/bibliotecando/templates/bibliotecando/login.html
@@ -43,7 +43,7 @@
                     </div>
                     
 
-                    <p>Don't have an account?<a href="{% url 'bibliotecando:registro' %}">log up!</a>.</p>
+                    <p>Don't have an account?<a href="{% url 'bibliotecando:registro' %}">log up!</a></p>
                     <button type="submit" class="registerbtn">
                         <p>Login</p>
                     </button>
