--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <img id="logo" src=" {% static 'svg/bibliotecandoLogo.svg' %}" alt="">
         </div>
         <div class="barra_pesquisa">
-            <h2>Aqui estará a barra de pesquisa</h2>
+            <img src="{% static 'svg/searchBar.svg' %}" alt="" class="searchBar">
             <nav>
                 <ul>
                     <li><a href="/" class="{% if request.path == '/' %}pagina_atual{% endif %}">Home</a></li>
