--- a/bibliotecando/templates/bibliotecando/register.html
+++ b/bibliotecando/templates/bibliotecando/register.html
@@ -41,7 +41,7 @@
                         {% endif %}
                     </div>
                     <div class="form-group">
-                        <input type="file" name="imagem" id="imagem" class="form-control" placeholder="Imagem" required>
+                        <input type="file" name="imagem" id="imagem" class="form-control" required>
                         <img src="{% static 'svg/camera.svg' %}" alt="">
                         {% if form.imagem.errors %}
                         <div class="text-danger">
