--- a/bibliotecando/static/css/detalhesLivro.css
+++ b/bibliotecando/static/css/detalhesLivro.css
@@ -28,12 +28,6 @@
 
 }
 
-.detalhes_img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 15px;
-}
 
 .container_titulo {
     display: flex;
@@ -57,6 +51,52 @@
     border: none;
 }
 
+.detalhes_container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding-right: 1rem ;
+    height: auto;
+}
+.detalhes_img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px;
+}
+.detalhes_info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 16rem;
+}
+.detalhes_info p {
+    font-size: 0.8rem;
+    color: #444;
+    font-weight: 400;
+    margin: 0.2rem;
+}
+.detalhes_info #data_lancamento {
+    font-size: 0.7rem;
+}
+.detalhes_info #nome_livro {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #444;
+}
+
+/*favoritar*/
+#favorito-btn{
+    background-color: transparent;
+    border: none;
+    justify-self: flex-end;
+    align-self: flex-end;
+}
+.fav-img {
+    width: 2rem;
+    height: 2rem;
+}
 
 /*arede adição de comentario*/
 .btn_comentario {
@@ -173,3 +213,4 @@ form {
     font-weight: 600;
     line-height: normal;
 }
+
